--- a/sheets/style.css
+++ b/sheets/style.css
@@ -8,12 +8,14 @@
 @font-face {
   font-family: 'MyriadProRegular';
   src: url('../fonts/MyriadProRegular.woff') format('woff');
+  src: url('../fonts/MyriadProRegular.woff2') format('woff2');
   font-style: normal;
   font-weight: 400;
 }
 @font-face {
   font-family: 'Gilroy-light';
   src: url('../fonts/Gilroy-Light.woff') format('woff');
+  src: url('../fonts/Gilroy-Light.woff2') format('woff2');
   font-style: normal;
   font-weight: 300;
 }
@@ -26,6 +28,7 @@
 @font-face {
   font-family: 'GilroyRegular';
   src: url('../fonts/GilroyRegular.woff') format('woff');
+  src: url('../fonts/GilroyRegular.wof2f') format('woff2');
   font-style: normal;
   font-weight: 400;
 }
