--- a/sheets/style.css
+++ b/sheets/style.css
@@ -47,7 +47,7 @@
 
 
 html {
-  font-size: 16px;
+  font-size: 14px;
   overflow-x: hidden;
 }
 
@@ -535,7 +535,7 @@ body {
   position: absolute;
   display: flex;
  margin-top: 2rem;
-  height: 40%;
+  height: 60vh;
   width: auto;
 }
 
@@ -1009,6 +1009,14 @@ li::before {
   }
 }
 
+@media (min-width:1000px) {
+
+  .pop-up-active {
+   
+    height: 70vh;
+}
+
+  
 @media screen and (min-width:768px) and (orientation:portrait) {
   html {
     font-size: 16px;
